--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,8 @@
 [package]
-name = "src"
+name = "docker-localbind"
 version = "0.1.0"
 authors = ["user"]
 edition = "2018"
 
 [dependencies]
 nix = "0.13.0"
-
