Switch to structopt and different usage style
Bind mounts are now specified via the commandline in a way similar to Docker volume specifications.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,10 @@ authors = ["Ronald Volgers"]
 edition = "2018"
 
 [[bin]]
-name = "docker-localbind"
+name = "localbind"
 path = "src/main.rs"
 
 [dependencies]
 nix = "0.13.0"
+structopt = { version = "0.2.15", default-features = false }
+
